2007-02-17  David Lodge <dave@cirt.net>

	* docs/en_GB/en_GB.po: Added (British) English translation.
	* docs/Makefile.am: Added en_GB to DOC_LINGUAS

2007-02-10  AP Singh Alam <aalam@users.sf.net>

	* docs/pa/pa.po: pa is added translation
	* docs/Makefile.am: pa is added to list

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-applet.c: Add include to fix a warning.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/gweather.xml: Fix build.

2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: Stop the search of a location if the criterium is
	empty (bug #358499). Patch from Esteban Sánchez <esteban@steve-0.com>.

2006-09-03  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.

2006-09-02  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	* docs/sv/figures/*: Added screenshots.

2006-08-20  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in:
	- correct zone for Loveland (closes #335135)
	- commit mass removal of dead locations (closes #166014)

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-applet.c: Call place_widgets() from update_finish() so that
	  in a vertical panel gweather applet redisplays properly. Patch from
	  Joshua Crawford <joshua_gordon_crawford@yahoo.com.au>. Closes
	  #325915.

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Small update of French translation

2006-07-23  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: locations love. Patch from John N. Laliberte:
	  Closes #340421. Patch from Thierry Moisan.

2006-07-23  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Updated Swedish translation.
	
2006-07-11  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather-pref.c: (temp_combo_changed_cb, speed_combo_changed_cb,