@@ -14351,30 +14351,35 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Ashland</_name>
         <code>KASX</code>
+				<zone>WIZ003</zone>
         <coordinates>46-32-59N 090-55-06W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Baraboo</_name>
         <code>KDLL</code>
+				<zone>WIZ056</zone>
         <coordinates>43-31-19N 089-46-15W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Boscobel</_name>
         <code>KOVS</code>
+        <zone>WIZ061</zone>
         <coordinates>43-09-22N 090-40-39W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Clintonville</_name>
         <code>KCLI</code>
+        <zone>WIZ037</zone>
         <coordinates>44-36-50N 088-43-53W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Eagle River</_name>
         <code>KEGV</code>
+        <zone>WIZ005</zone>
         <coordinates>45-55-54N 089-16-09W</coordinates>
       </location>
       <location>
@@ -14421,7 +14426,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Juneau</_name>
         <code>KUNU</code>
-	<zone>WIZ058</zone>
+	      <zone>WIZ058</zone>
         <radar>rst</radar>
         <coordinates>43-25-36N 088-42-12W</coordinates>
       </location>
@@ -14447,14 +14452,16 @@
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
-	<_name>Ladysmith</_name>
-	<code>KRCX</code>
-	<coordinates>45-29-48N 091-00-01W</coordinates>
+      	 <_name>Ladysmith</_name>
+      	 <code>KRCX</code>
+        <zone>WIZ016</zone>
+      	 <coordinates>45-29-48N 091-00-01W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Land O' Lakes</_name>
         <code>KLNL</code>
+        <zone>WIZ005</zone>
         <coordinates>46-09-14N 089-12-43W</coordinates>
       </location>
       <location>
@@ -14493,12 +14500,14 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Medford</_name>
         <code>KMDZ</code>
+        <zone>WIZ017</zone>
         <coordinates>45-06-04N 090-18-12W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Merrill</_name>
         <code>KRRL</code>
+        <zone>WIZ018</zone>
         <coordinates>45-11N 089-42W</coordinates>
       </location>
       <city>
@@ -14523,6 +14532,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Mineral Point</_name>
         <code>KMRJ</code>
+        <zone>WIZ062</zone>
         <coordinates>42-53-07N 090-13-55W</coordinates>
       </location>
       <location>
@@ -14537,6 +14547,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Monroe</_name>
         <code>KEFT</code>
+        <zone>WIZ068</zone>
         <coordinates>42-36-54N 089-35-27W</coordinates>
       </location>
       <location>
@@ -14551,12 +14562,14 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>New Richmond</_name>
         <code>KRNH</code>
+        <zone>WIZ023</zone>
         <coordinates>45-08-54N 092-32-17W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Osceola</_name>
         <code>KOEO</code>
+        <zone>WIZ014</zone>
         <coordinates>45-18-31N 092-41-24W</coordinates>
       </location>
       <location>
@@ -14579,12 +14592,14 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Prairie Du Chien</_name>
         <code>KPDC</code>
+        <zone>WIZ054</zone>
         <coordinates>43-01-19N 091-07-29W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Racine</_name>
         <code>KRAC</code>
+        <zone>WIZ071</zone>
         <coordinates>42-45-31N 087-49-04W</coordinates>
       </location>
       <location>
@@ -14598,6 +14613,7 @@
       <city>
        <!-- Translators: This is in Wisconsin in the United States. -->
        <_name>Rice Lake</_name>
+       <zone>WIZ015</zone>
        <location>
          <!-- Translators: This is in Rice Lake, Wisconsin in the United States. -->
          <_name>Carl's Field Airport</_name>
@@ -14620,6 +14636,7 @@
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Siren</_name>
+        <zone>WIZ006</zone>
         <code>KRZN</code>
         <coordinates>45-49-22N 092-22-21W</coordinates>
       </location>
@@ -14627,12 +14644,14 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Sparta</_name>
         <code>KCMY</code>
+        <zone>WIZ042</zone>
         <coordinates>43-57-30N 090-44-16W</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Stevens Point</_name>
         <code>KSTE</code>
+        <zone>WIZ036</zone>
         <coordinates>44-32-42N 089-31-49W</coordinates>
       </location>
       <location>
@@ -14662,6 +14681,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Watertown</_name>
         <code>KRYV</code>
+				<zone>WIZ064</zone>
         <coordinates>43-10N 088-43W</coordinates>
       </location>
       <location>
@@ -14676,6 +14696,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>Waupaca</_name>
         <code>KPCZ</code>
+        <zone>WIZ037</zone>
         <coordinates>44-20-01N 089-00-55W</coordinates>
       </location>
       <location>
@@ -14690,6 +14711,7 @@
         <!-- Translators: This is in Wisconsin in the United States. -->
         <_name>West Bend</_name>
         <code>KETB</code>
+        <zone>WIZ059</zone>
         <coordinates>43-25-20N 088-07-41W</coordinates>
       </location>
       <location>
