@@ -1,3 +1,8 @@
+2007-02-28  Sebastien Bacher  <seb128@ubuntu.com>
+
+	* Locations.xml.in: add zones to Wisconsin cities, 
+	patch from Alex Mauer <hawke@hawkesnest.net> (bug #363364)
+
 2007-02-17  David Lodge <dave@cirt.net>
 
 	* docs/en_GB/en_GB.po: Added (British) English translation.
